--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,22 @@
 
 /* Your CSS Code here. */
+.holder{
+	display:flex;
+	flex-direction:row;
+	justify-content:space-evenly;
+    margin:0.3rem;
+}
+main div{
+	width:100px;
+	height:100px;
+	color:black;
+}
+main #div3{
+	background-color:green;
+}
+main #div1{
+	background-color:red;
+}
+main #div2{
+	background-color:blue;
+}
