--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,11 @@
 
 /* Your CSS Code here. */
 .holder{
-	display:flex;
-	flex-direction:row;
-	justify-content:space-evenly;
+	  display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
     margin:0.3rem;
+    flex-wrap:no-wrap
 }
 main div{
 	width:100px;
